Prevent overflow on mobile menu

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body {
     color: var(--white-color);
 
 }
+body, html {
+  overflow-x: hidden;
+}
 h1 {
     font-size: 4.5rem;
 }
